# ChangeLog for app-text/ghostscript
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/ghostscript/ChangeLog,v 1.59 2004/07/08 01:49:20 mr_bones_ Exp $

  07 Jul 2004; Michael Sterrett <mr_bones_@gentoo.org>
  ghostscript-7.05.6.ebuild:
  fix use invocation

  01 Jul 2004; Luca Barbato <lu_zero@gentoo.org> ghostscript-7.05.6.ebuild:
  Minor changes

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  ghostscript-7.05.6.ebuild, ghostscript-7.07.1-r1.ebuild,
  ghostscript-7.07.1-r2.ebuild:
  virtual/glibc -> virtual/libc

*ghostscript-7.05.6 (30 Jun 2004)

  30 Jun 2004; Luca Barbato <lu_zero@gentoo.org> +files/gs7.05-gdevhl12.c,
  +ghostscript-7.05.6.ebuild, ghostscript-7.07.1-r1.ebuild,
  ghostscript-7.07.1-r2.ebuild:
  Put back the ghostscript-7.05.6 since the latter won't work on ppc

  28 Jun 2004; Tom Gall <tgall@gentoo.org>  ghostscript-7.07.1-r2.ebuild:
  mark ~ppc64, bug #54151

  02 Jun 2004; Aron Griffis <agriffis@gentoo.org>
  ghostscript-7.07.1-r1.ebuild, ghostscript-7.07.1-r2.ebuild:
  Fix use invocation

  13 May 2004; Stephen P. Becker <geoman@gentoo.org>
  ghostscript-7.07.1-r1.ebuild:
  Stable on mips.

  04 May 2004; Michael Sterrett <mr_bones_@gentoo.org>
  ghostscript-7.07.1-r1.ebuild, ghostscript-7.07.1-r2.ebuild:
  inherit flag-o-matic

  28 Apr 2004; Travis Tilley <lv@gentoo.org> ghostscript-7.07.1-r1.ebuild,
  ghostscript-7.07.1-r2.ebuild:
  replace -O3 with -O2 if compiling with gcc 3.4

  28 Apr 2004; Heinrich Wendel <lanius@gentoo.org>
  ghostscript-7.07.1-r2.ebuild:
  add emacs useflag, bug #47854

  26 Apr 2004; Aron Griffis <agriffis@gentoo.org>
  ghostscript-7.07.1-r1.ebuild, ghostscript-7.07.1-r2.ebuild:
  Add die following econf for bug 48950

*ghostscript-7.07.1-r2 (26 Apr 2004)

  26 Apr 2004; Heinrich Wendel <lanius@gentoo.org>
  ghostscript-7.07.1-r2.ebuild, files/gs7.07.1-krgb.patch.gz:
  add krgb support from hpijs
