@@ -1,16 +1,18 @@
-MD5 d4a120db2d8c898bdfd844d9befc39fd ChangeLog 9770
+MD5 3754f20f5a02af453cbb91bce36555d8 ghostscript-7.07.1-r3.ebuild 3342
+MD5 f03ac964bd02a6935e57f98d44c897f2 ghostscript-7.07.1-r2.ebuild 3195
+MD5 b4ca501a335a1ec3b00b0d3e0856b573 ChangeLog 9925
 MD5 2d388c4d1ccbea838badfaa24e97d202 ghostscript-7.05.6.ebuild 2619
 MD5 26b4b081d538c195dc39bcb2ec8e6f3a metadata.xml 161
 MD5 0c3b4e549fd62104ea87a7fe1728d13b ghostscript-7.07.1-r1.ebuild 3087
-MD5 f03ac964bd02a6935e57f98d44c897f2 ghostscript-7.07.1-r2.ebuild 3195
-MD5 71a93bd09748f37be38b726b0530e497 files/digest-ghostscript-7.07.1-r1 291
-MD5 71a93bd09748f37be38b726b0530e497 files/digest-ghostscript-7.07.1-r2 291
-MD5 fd34b2b7a029f19eab4ba3f69afe295e files/ghostscript-7.05.6.man.patch 1231
-MD5 286fde55f66a662388d3004e6d8d896a files/gs7.05-gdevhl12.c 22009
-MD5 f0a076c486b8d72e90c8aac2355ccd4d files/gs7.05.6-cjk.diff 20038
-MD5 5f1b04ca58928a339b749703e067e2ba files/gs7.05.6-kochi-substitute.patch 3774
 MD5 acda8ddfde1efeaf451cb28a67dcc773 files/gs7.07.1-krgb.patch.gz 5569
-MD5 c63f6d71a403dbc72265831386b84eb0 files/digest-ghostscript-7.05.6 359
-MD5 68fa21d11a860c222c8ba89c39ce578e files/gs7.05.6-gdevpx.patch 402
-MD5 ac6af6bf67095500ea043aea27062d62 files/gs7.07.1-ijs.patch 401
+MD5 71a93bd09748f37be38b726b0530e497 files/digest-ghostscript-7.07.1-r3 291
 MD5 7208aacbb4aa234ce1a6126e8f682c06 files/gs7.07.1-ps2epsi.patch 372
+MD5 c63f6d71a403dbc72265831386b84eb0 files/digest-ghostscript-7.05.6 359
+MD5 71a93bd09748f37be38b726b0530e497 files/digest-ghostscript-7.07.1-r1 291
+MD5 fd34b2b7a029f19eab4ba3f69afe295e files/ghostscript-7.05.6.man.patch 1231
+MD5 5f1b04ca58928a339b749703e067e2ba files/gs7.05.6-kochi-substitute.patch 3774
+MD5 ac6af6bf67095500ea043aea27062d62 files/gs7.07.1-ijs.patch 401
+MD5 286fde55f66a662388d3004e6d8d896a files/gs7.05-gdevhl12.c 22009
+MD5 68fa21d11a860c222c8ba89c39ce578e files/gs7.05.6-gdevpx.patch 402
+MD5 71a93bd09748f37be38b726b0530e497 files/digest-ghostscript-7.07.1-r2 291
+MD5 f0a076c486b8d72e90c8aac2355ccd4d files/gs7.05.6-cjk.diff 20038
