@@ -1,6 +1,12 @@
 # ChangeLog for app-text/ghostscript
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/ghostscript/ChangeLog,v 1.59 2004/07/08 01:49:20 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/ghostscript/ChangeLog,v 1.60 2004/07/11 19:52:55 azarah Exp $
+
+*ghostscript-7.07.1-r3 (11 Jul 2004)
+
+  11 Jul 2004; Martin Schlemmer <azarah@gentoo.org>
+  +ghostscript-7.07.1-r3.ebuild:
+  Fix bogus prefix in ijs-config.
 
   07 Jul 2004; Michael Sterrett <mr_bones_@gentoo.org>
   ghostscript-7.05.6.ebuild:
